# webtodotxt

./: README.md  pyproject.toml
webtodotxt/: __init__.py  account.py  auth.py  cli.py  config.py  crud.py  extensions.py  main.py  routes.py  search.py  token.py
webtodotxt/models/: accounts.py  file.py  flash.py  todos.py  user.py
webtodotxt/static/: crud.js  styles.css
webtodotxt/static/favicon/: site.webmanifest
webtodotxt/templates/: 404.html  account_view.html  error.html  footer.html  header.html  index.html  infos_block.html  login.html  main.html  search.html
